CDS add Swagger annotations for Model Type API
Issue-ID: CCSDK-3014
